[tool.poetry]
name = "conversion-quiz"
version = "0.1.0"
description = "A quiz application for unit conversions"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "<4.0,>=3.9"
urllib3 = "^1.26.12"
flask = "3.1.0"
psycopg2 = "^2.9.10"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"